# mHM

./: .gitignore  .gitlab-ci.yml  .gitmodules  .zenodo.json  AUTHORS  CMakeLists.txt  INSTALL.md  LICENSE  LICENSE.md  LICENSE.txt  MANIFEST.in  Makefile  Makefile_mrm  README  README.md  RELEASE  RELEASES  TODO  TODO.txt  analyse_cdo_diff.py  check  docu_pet.txt  gaugeinfo.txt  installinstructions_with_cmake  mHM_papers.txt  mhm.fbp  mhm.nml  mhm.nml.eve  mhm_outputs.nml  mhm_parameter.nml  mpr_global_parameter_mhm.nml  mpr_mhm.nml  mrm.nml  mrm_outputs.nml  mrm_parameter.nml  pet_check.py  pyproject.toml  setup.py  testingInstructions  version.txt  (+2 more)
CI-scripts/: compile  (+10 more)
post-proc/GIS2FEM/: CMakeLists.txt  README.txt  geo.cpp  geo.h  main.cpp  misc.cpp  misc.h
post-proc/GIS2FEM/Cmake/: Configure.h.in  base.cmake
post-proc/GIS2FEM/test_case/: GIS2FEM.sh  Naegelstedt.pcp  recharge-monthly.asc
pybind/: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
pybind/examples/: 01_simple_run.py  02_time_steps.py  03_plot.py  04_grid_info.py  05_spotpy_optimization.py  06_meteo_coupling.py
pybind/mhm/: .f2py_f2cmap  CMakeLists.txt  __init__.py  cli.py  download.py  tools.py  wrapper.f90
pybind/src/: CMakeLists.txt
pybind/tests/: test_pybind.py
src/: CMakeLists.txt  mhm_driver.f90  mo_file.f90  mo_global_variables.f90  mo_init_states.f90  mo_meteo_forcings.f90  mo_mhm.f90  mo_mhm_constants.f90  mo_mhm_eval.f90  mo_mpr_runoff.f90  mo_mpr_smhorizons.f90  mo_mpr_soilmoist.f90  mo_multi_param_reg.f90  mo_net_startup.f90  mo_netcdf.f90  mo_neutrons.f90  mo_objective_function.f90  mo_pet.f90  mo_prepare_gridded_LAI.f90  mo_prepare_gridded_lai1.f90  mo_radiation.f90  mo_read_config.f90  mo_read_lai.f90  mo_read_latlon.f90  mo_read_lut.f90  mo_read_meteo.f90  mo_read_optional_data.f90  mo_read_spatial_data.f90  mo_read_timeseries.f90  mo_read_wrapper.f90  mo_refer_et.f90  mo_restart.f90  mo_routing.f90  mo_runoff.f90  mo_set_netcdf_outputs.f90  mo_set_netcdf_restart.f90  mo_signatures.f90  mo_snow_accum_melt.f90  mo_soil_moisture.f90  mo_spatial_agg_disagg_forcing.f90  (+6 more)
src/MPR/: mo_mpr_constants.f90  mo_mpr_eval.f90  mo_mpr_file.f90  mo_mpr_global_variables.f90  mo_mpr_neutrons.f90  mo_mpr_pet.f90  mo_mpr_read_config.f90  mo_mpr_restart.f90  mo_mpr_runoff.f90  mo_mpr_smhorizons.f90  mo_mpr_soilmoist.f90  mo_mpr_startup.f90  mo_multi_param_reg.f90  mo_prepare_gridded_lai.f90  mo_read_bin.f90  mo_read_lut.f90  mo_read_wrapper.f90  mo_soil_database.f90  mo_upscaling_operators.f90  mpr_driver.F90  mpr_driver.f90
src/common/: mo_check.f90  mo_clean_up.f90  mo_common_MPI_tools.F90  mo_common_constants.f90  mo_common_datetime_type.f90  mo_common_file.f90  mo_common_functions.f90  mo_common_mHM_mRM_file.f90  mo_common_mHM_mRM_read_config.f90  mo_common_mHM_mRM_restart.f90  mo_common_mHM_mRM_variables.f90  mo_common_read_config.F90  mo_common_read_config.f90  mo_common_read_data.f90  mo_common_restart.f90  mo_common_run_variables.f90  mo_common_types.F90  mo_common_variables.F90  mo_common_variables.f90  mo_grid.f90  mo_nc_output.f90  mo_optimization.F90  mo_optimization.f90  mo_read_forcing_nc.f90  mo_read_latlon.f90  mo_read_nc.f90  mo_read_spatial_data.f90  mo_read_timeseries.f90  mo_template.f90
src/common_mHM_mRM/: mo_common_mHM_mRM_MPI_tools.f90  mo_common_mHM_mRM_file.f90  mo_common_mHM_mRM_read_config.f90  mo_common_mHM_mRM_restart.f90  mo_common_mHM_mRM_variables.f90  mo_optimization.f90
src/coupling/: mo_coupling_type.f90
src/lib/: mo_anneal.f90  mo_append.f90  mo_boxcox.f90  mo_constants.f90  mo_corr.f90  mo_dds.f90  mo_errormeasures.f90  mo_finish.f90  mo_global_structures.f90  mo_julian.f90  mo_kind.f90  mo_linfit.f90  mo_mad.f90  mo_mcmc.f90  mo_message.f90  mo_moment.f90  mo_ncread.f90  mo_ncwrite.f90  mo_netcdf.f90  mo_nml.f90  mo_optimization_types.f90  mo_optimization_utils.f90  mo_orderpack.f90  mo_os.f90  mo_percentile.f90  mo_read_forcing_nc.f90  mo_read_timeseries.f90  mo_sce.f90  mo_spatialsimilarity.f90  mo_standard_score.f90  mo_string_utils.f90  mo_temporal_aggregation.f90  mo_timer.f90  mo_utils.f90  mo_xor4096.f90
src/mHM/: mhm_driver.F90  mhm_driver.f90  mo_canopy_interc.f90  mo_file.F90  mo_file.f90  mo_global_variables.f90  mo_init_states.f90  mo_meteo_forcings.f90  mo_meteo_handler.f90  mo_mhm.f90  mo_mhm_bfi.f90  mo_mhm_cli.F90  mo_mhm_cli.f90  mo_mhm_constants.f90  mo_mhm_eval.F90  mo_mhm_eval.f90  mo_mhm_interface.F90  mo_mhm_interface.f90  mo_mhm_interface_run.F90  mo_mhm_interface_run.f90  mo_mhm_messages.F90  mo_mhm_messages.f90  mo_mhm_mpr_interface.f90  mo_mhm_read_config.f90  mo_mpr_pet.f90  mo_mpr_petdynamicscaling.f90  mo_mpr_smhorizons.f90  mo_mpr_soilmoist.f90  mo_multi_param_reg.f90  mo_neutrons.f90  mo_objective_function.F90  mo_objective_function.f90  mo_objective_function_sm.f90  mo_pet.f90  mo_prepare_gridded_lai.f90  mo_read_config.f90  mo_read_latlon.f90  mo_read_meteo.f90  mo_read_optional_data.f90  mo_read_wrapper.f90  (+15 more)
src/mRM/: mo_mrm_constants.F90  mo_mrm_constants.f90  mo_mrm_eval.f90  mo_mrm_file.f90  mo_mrm_global_variables.f90  mo_mrm_init.f90  mo_mrm_mpr.f90  mo_mrm_net_startup.f90  mo_mrm_objective_function_runoff.F90  mo_mrm_objective_function_runoff.f90  mo_mrm_pre_routing.f90  mo_mrm_read_config.f90  mo_mrm_read_data.f90  mo_mrm_read_latlon.f90  mo_mrm_restart.f90  mo_mrm_riv_temp_class.f90  mo_mrm_river_head.f90  mo_mrm_river_temp.f90  mo_mrm_routing.f90  mo_mrm_signatures.f90  mo_mrm_tools.f90  mo_mrm_write.f90  mo_mrm_write_fluxes_states.F90  mo_mrm_write_fluxes_states.f90  mrm_driver.f90
src/meteo/: mo_meteo_handler.f90  mo_meteo_helper.f90  mo_meteo_spatial_tools.f90  mo_meteo_temporal_tools.f90  mo_spatial_agg_disagg_forcing.f90  mo_temporal_disagg_forcing.f90
src/tests/: CMakeLists.txt  test_canopy_interc.pf  test_grid.pf  test_meteo_spatial_tools.pf  test_meteo_temporal_tools.pf  test_pet.pf  test_pet_priestly.pf  test_runoff  test_runoff.pf  test_snow_accum_melt  test_snow_accum_melt.pf  test_soil_moisture  test_soil_moisture.pf  test_spatial_agg_disagg_forcing.pf  test_temporal_disagg_forcing.pf
(+964 files in other folders)
